# fizzbuzz-cpp

./: .gitignore  .travis.yml  CMakeLists.txt
include/: countoff.hpp  game.hpp  rule.hpp  student.hpp  time_rule.hpp
src/: Student.cpp  Student.h  main.cpp
tests/: CMakeLists.txt  TestStudent.cpp  TestStudent.h  countoff.cpp
